--- a/FinalProject/backend/src/main/webapp/index.html
+++ b/FinalProject/backend/src/main/webapp/index.html
@@ -59,7 +59,7 @@
                                id="nameInput"/>
                         <span class="input-group-btn">
                              <button class="btn btn-default btn-primary btn-group btn-lg"
-                                     type="submit" id="helloButton">Say "Hello" &raquo;</button>
+                                     type="submit" id="tellJokeButton">Tell a joke &raquo;</button>
                           </span>
                     </div>
                 </form>
@@ -88,16 +88,18 @@
 <script type="text/javascript">
     // A function that attaches a "Say Hello" button click handler
     function enableClick() {
-      document.getElementById('helloButton').onclick = function() {
+      document.getElementById('tellJokeButton').onclick = function() {
         var name = document.getElementById('nameInput').value;
-        gapi.client.myApi.sayHi({'name': name}).execute(
+        gapi.client.jokeApi.tellJoke().execute(
           function(response) {
             var outputAlertDiv = document.getElementById('outputAlert');
             outputAlertDiv.style.visibility = 'visible';
 
             if (!response.error) {
               outputAlertDiv.className = 'alert alert-success';
-              outputAlertDiv.innerHTML = '<h2>' + response.result.data + '</h2>';
+              var question = response.result.data.split('//')[0]
+              var answer = response.result.data.split('//')[1]
+              outputAlertDiv.innerHTML = '<h2>' + question + '</h2><h2>' + answer + '</h2>';
             }
             else if (response.error) {
               outputAlertDiv.className = 'alert alert-danger';
@@ -110,7 +112,7 @@
     }
     // This is called initially
     function init() {
-      var apiName = 'myApi';
+      var apiName = 'jokeApi';
       var apiVersion = 'v1';
       var apiRoot = 'https://' + window.location.host + '/_ah/api';
       if (window.location.hostname == 'localhost'
